Reduce the width of comment edit box to fix wrapping.

--- a/r2/r2/public/static/css/compact.scss
+++ b/r2/r2/public/static/css/compact.scss
@@ -1056,6 +1056,9 @@ padding: 5px;
     font-size: 11px;
 	 word-wrap: break-word;
 }
+.comment > .entry .usertext-edit {
+    margin-left: 42px;
+}
 .comment > .metabuttons {
     float: right;
     margin: 10px;
